--- a/package.json
+++ b/package.json
@@ -2,30 +2,19 @@
     "name": "webpack-boilerplate",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "private": true,
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "watch": "webpack --watch",
-        "start": "webpack-dev-server --open",
-        "build": "webpack"
+		"build": "webpack"
     },
     "keywords": [],
     "author": "",
-    "license": "ISC",
+    "license": "MIT",
     "devDependencies": {
-        "clean-webpack-plugin": "^0.1.16",
-        "css-loader": "^6.5.1",
-        "csv-loader": "^3.0.3",
-        "file-loader": "^0.11.2",
-        "html-webpack-plugin": "^2.30.1",
-        "style-loader": "^0.18.2",
-        "ts-loader": "^2.3.2",
-        "typescript": "^2.4.2",
         "webpack": "^5.66.0",
-        "webpack-dev-server": "^4.7.3",
-        "xml-loader": "^1.2.1"
+        "webpack-cli": "^4.9.1"
     },
     "dependencies": {
-        "lodash": "^4.17.4"
+        "lodash": "^4.17.21"
     }
 }
